# stocxer

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .vercelignore  AI_CHAT_ARCHITECTURE.md  AI_CHAT_INTEGRATION_GUIDE.md  AI_CHAT_NOW_LIVE.md  AI_CHAT_PHASE2_SUMMARY.md  AI_CHAT_QUICK_REF.md  AI_SCAN_ANALYSIS_GUIDE.md  AI_TOOL_CALLING_COMPLETE.md  AMD_DETECTION_SUMMARY.md  AMD_PATTERN_ENHANCEMENT.md  AUTHENTICATION_STATUS.md  AUTH_FIX_GUIDE.md  AUTH_FLOW_COMPLETE.md  BILLING_IMPLEMENTATION_SUMMARY.md  BILLING_SYSTEM_GUIDE.md  BILLING_TOKEN_SCHEMA.md  CLOUDFLARE_CORS_FIX.md  CODE_CHANGES_REFERENCE.md  CONSOLE_ERRORS_FIX.md  DASHBOARD_ENHANCEMENTS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUMMARY.md  DUAL_BILLING_MODEL_COMPLETE.md  Dockerfile  ERROR_FIXES_SUMMARY.md  EXPIRY_DAY_EXCLUSION.md  FINAL_VERIFICATION.md  FIX_OPTIONS_SCHEMA.md  FREE_CREDITS_README.md  FREE_TRIAL_MODEL_GUIDE.md  HOW_TO_SEE_NEW_FEATURES.md  INDEX_PROBABILITY_ANALYSIS.md  INTEGRATION_COMPLETE.md  (+212 more)
api/: index.py  requirements.txt
config/: settings.py  supabase_config.py
database/: add_options_columns.sql  news_schema.sql  paper_trading_schema.sql  rls_policies.sql  schema.sql
examples/: usage_examples.py
frontend/: .env.example  .env.production  .gitignore  README.md  VERCEL_DEPLOYMENT.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
fyers-mcp/: PRODUCTION_GUIDE.md  README.md  __init__.py  claude_desktop_config.json  install.sh  mcp.json  server.py  server.py.simple  test_server.py
static/: config.js  (+9 more)
(+156 files in other folders)
