[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tradewise"
version = "1.0.0"
description = "Options trading analysis and signal generation API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "TradeWise Team", email = "support@tradewise.app"}
]
license = {text = "MIT"}

[tool.setuptools]
packages = ["src", "config"]

[tool.vercel]
# FastAPI app entrypoint for Vercel deployment
app = "main:app"
